_sass/components/_blog-article.scss
%blog--heading {
    margin-top: 5*$br;
}

$color-list: $blue $seafoam $salmon $purple;
$blog-article--margin--CENTERED: 5*$br auto;

@mixin color($first) {
    $second: ( ($first + 4) % 4 + 1 );
    $third: ( ($first + 5) % 4 + 1 );
    $fourth: ( ($first + 6) % 4 + 1 );

    color: $base--color;
    h1 { color: nth($color-list, $first); }
    h2 { color: nth($color-list, $second); }
    h3 { color: nth($color-list, $third); }
    h4 { color: nth($color-list, $fourth); }

    .highlight {
        border-color: nth($color-list, $first);
    }

    a {
        @extend %hoverUnderline;
        color: nth($color-list, $third);

        &:focus, &:visited {
            color: nth($color-list, $third);
        }
    }
}

.blog-article {

    &.blue {
        @include color(1);
    }
    &.seafoam {
        @include color(2);
    }
    &.salmon {
        @include color(3);
    }
    &.purple {
        @include color(4);
    }

    h2 { @extend .base--h2; @extend %blog--heading; }
    h3 { @extend .base--h3; @extend %blog--heading; }

    p {
        font-size: 21px;
        line-height: 1.58;
    }

    .highlight {
        margin: $blog-article--margin--CENTERED;
        border-left: 3px solid $blue;
        box-shadow: $base--box-shadow;
        background: darken($base--bg, 2%);
        color: lighten($base--color, 5%);
        padding: $br;
        font-size: 16px;
        line-height: 1.5;
    }

    img {
        @extend .image;
        margin: $blog-article--margin--CENTERED;
    }
}

